Fixed some layout issues

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -27,3 +27,19 @@ code {
 	border-radius: 15px;
 	/* justify-self: center; */
 }
+
+.container {
+	display: grid;
+	grid-template-columns: repeat(1, 1fr);
+	grid-auto-rows: minmax(1fr, auto);
+	grid-gap: 20px;
+
+	border: 3px solid #e0e0e0;
+	border-radius: 7px;
+	padding: 1.5%;
+	margin: 1.5%;
+}
+
+img {
+	width: 100%;
+}
